apps/hello-world/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-hello-world-latest
  labels:
    app.kubernetes.io/part-of: fluxv2-demo
