apps/hello-world/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: demo-hello-world-latest
  labels:
    app: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
